// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect calculator element to match working snapshot 1`] = `
<div
  id="calculator"
>
  <div
    className="buttons grid-box"
  >
    <input
      className="bg-grey grid-item input"
      readOnly={true}
      value={0}
    />
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="grid-item bg-orange"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="grid-item bg-orange"
      onClick={[Function]}
      type="button"
    >
      x
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="grid-item bg-orange"
      onClick={[Function]}
      type="button"
    >
      -
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="grid-item bg-orange"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="grid-item nill-btn"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="grid-item"
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="grid-item bg-orange"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;

exports[`expect calculator page to match working snapshot 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-around",
      "padding": "0% 5rem 0% 1rem",
    }
  }
>
  <div
    className="w-30"
  >
    <h4>
      Let's do some math!
    </h4>
  </div>
  <div
    id="calculator"
  >
    <div
      className="buttons grid-box"
    >
      <input
        className="bg-grey grid-item input"
        readOnly={true}
        value={0}
      />
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="grid-item bg-orange"
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="grid-item bg-orange"
        onClick={[Function]}
        type="button"
      >
        x
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="grid-item bg-orange"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="grid-item bg-orange"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        className="grid-item nill-btn"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <button
        className="grid-item"
        onClick={[Function]}
        type="button"
      >
        .
      </button>
      <button
        className="grid-item bg-orange"
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`expect home page to match working snapshot 1`] = `
<div>
  <h2
    style={
      Object {
        "marginBottom": "2rem",
        "marginTop": "5rem",
      }
    }
  >
    Welcome to our Page!
  </h2>
  <p>
    Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit
    <br />
    <br />
    Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit
  </p>
</div>
`;
